crates/analyzer/tests/snapshots/errors__duplicate_arg_in_contract_method.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: a function argument with the same name already exists
  ┌─ compile_errors/duplicate_arg_in_contract_method.fe:2:25
  │
2 │     pub fn bar(foo: u8, foo:u8):
  │                         ^^^^^^ Conflicting definition of function argument `foo`
  │
  = Note: Give one of the `foo` function arguments a different name


